--- a/app/views/purchases/get_all_time.html.erb
+++ b/app/views/purchases/get_all_time.html.erb
@@ -1,2 +1,3 @@
-<h1>Purchases#get_all_time</h1>
-<p>Find me in app/views/purchases/get_all_time.html.erb</p>
+{
+ "all_times_total_gross_income":<%=@all_time_gross_income%>
+}
