--- a/app/views/purchases/post_file.html.erb
+++ b/app/views/purchases/post_file.html.erb
@@ -1,2 +1,4 @@
-<h1>Purchases#post_file</h1>
-<p>Find me in app/views/purchases/post_file.html.erb</p>
+{
+ "file_total_gross_income":<%=@gross_income%>,
+ "all_times_total_gross_income":<%=@all_time_gross_income%>
+}
