--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <h1>The Dev Challenge</h1>
     <% if logged_in? %>
-        <p><%= current_user%></p>
+        <p>Hello, <%= current_user[:name]%>!</p>
     <% end %>
     <%= form_with(model: @purchase,url: purchases_post_file_path, method: :post) do |form| %>
       <div class="field">
@@ -20,8 +20,14 @@
       <p>All times total gross income: <span id="all_times_total_gross_income"><%= @all_times_total_gross_income%></span></p>
     </div>
     <div id="error">Error</div>
+    
+    <% if logged_in? %>
+      <%= button_to "Logout", "auth/logout", method:"get" %>
+    <% else %> 
+      <%= button_to "Sign in with Google", "/auth/google_oauth2", method:"post" %>
+    <% end%>
   </div>
-  <%= button_to "Sign in with Google", "/auth/google_oauth2", method:"post" %>
+  
 </div>
 
 <%= javascript_include_tag 'home'%>
